--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -12,6 +13,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "mysql": "^2.18.1",
-    "mysql2": "^3.6.3"
+    "mysql2": "^3.6.3",
+    "nodemon": "^3.0.1"
   }
 }
