--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "nodemon server.js"
   },
   "keywords": [],
@@ -24,5 +24,8 @@
     "nodemailer": "^6.9.8",
     "nodemon": "^3.0.1",
     "xero-node": "^4.37.0"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0"
   }
 }
