--- a/package.json
+++ b/package.json
@@ -19,15 +19,12 @@
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.2",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.6.5",
     "nodemailer": "^6.9.8",
-<<<<<<< HEAD
-    "nodemon": "^3.0.1"
-=======
     "nodemon": "^3.0.1",
     "xero-node": "^4.37.0"
->>>>>>> main
   },
   "devDependencies": {
     "jest": "^29.7.0"
